--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -91,7 +91,7 @@ header {
 
   @media only screen and
   (max-width: $screen-xs) {
-    padding-top: 56px;
+    padding-top: 96px;
     padding-bottom: 0;
     text-align: center;
   }
