--- a/_sass/pages/_project-wizebank.scss
+++ b/_sass/pages/_project-wizebank.scss
@@ -3,8 +3,21 @@
   --video--height: 1046;
   background: white;
 
-  iframe {
-    top: -2px;
-    left: -2px;
+  &.video-wizebank-intro {
+    box-shadow: 0 20px 60px 0 rgba(5, 29, 61, 0.06);
+
+    iframe {
+     width: 101%;
+     left: -2px;
+    }
+  }
+}
+
+.video-wizebank-fullwidth {
+  padding-bottom: 144px;
+
+  @media only screen and
+  (max-width: $screen-xs) {
+    padding-bottom: 128px;
   }
 }
